update football content

--- a/doc/足球队产品需求文档.md
+++ b/doc/足球队产品需求文档.md
@@ -37,7 +37,7 @@ banner仅用于球队图片展示，图片比例2:1。数据由后台返回。
 
 列表中的每个item包含以下信息：
 1. 比赛对手
-2. 报名状态（有4个状态：还未报名、已报名、已请假、已结束。）
+2. 报名状态（有4个状态：还未报名、已报名、已请假、已结束：此状态时只可查看不可操作。）
 3. 比赛时间
 4. 比赛场地
 
