--- a/doc/后台接口文档.md
+++ b/doc/后台接口文档.md
@@ -139,7 +139,7 @@ url		|string	|文章链接
             "username": "范小青",
             "sportSuit": 10,
             "order": 1,
-            "avatar": "http://pb0geuvxr.bkt.clouddn.com/mp/football/10/_DSC1987.jpg"
+            "avatar": "http://qn.jcbjxyh.cn/mp/football/10/_DSC1987.jpg"
         }
 	... ...
 	]
@@ -173,9 +173,9 @@ order |int |对应ID
 {
     "result": 1,
     "data": [
-        "http://pb0geuvxr.bkt.clouddn.com/mp/football/20/_DSC0306.jpg",
-        "http://pb0geuvxr.bkt.clouddn.com/mp/football/20/_DSC0308.jpg",
-        "http://pb0geuvxr.bkt.clouddn.com/mp/football/20/_DSC0310.jpg",
+        "http://qn.jcbjxyh.cn/mp/football/20/_DSC0306.jpg",
+        "http://qn.jcbjxyh.cn/mp/football/20/_DSC0308.jpg",
+        "http://qn.jcbjxyh.cn/mp/football/20/_DSC0310.jpg",
 		... ...
 	]
 }
