更新需求文档

--- a/doc/足球队产品需求文档.md
+++ b/doc/足球队产品需求文档.md
@@ -1,3 +1,8 @@
+#足球队产品需求文档
+
+----
+
+​​
 此功能为足球队功能产品 [需求文档](https://free.modao.cc/app/xcii9hCX2HAjHWidLoU3AdLbIPvkBSn) 。
 
 该功能有5个模块：banner、队员风采、足球纵横、比赛信息、数据统计。
@@ -37,7 +42,7 @@ banner仅用于球队图片展示，图片比例2:1。数据由后台返回。
 
 列表中的每个item包含以下信息：
 1. 比赛对手
-2. 报名状态（有4个状态：还未报名、已报名、已请假、已结束：此状态时只可查看不可操作。）
+2. 报名状态（有4个状态：还未报名、已报名、已请假、已结束。）
 3. 比赛时间
 4. 比赛场地
 
@@ -65,12 +70,23 @@ banner仅用于球队图片展示，图片比例2:1。数据由后台返回。
 当发布者点击修改时，可以进入 **发布比赛** 功能，之前填写的数据都在。除此之外，添加比赛结果。
 
 ![](https://upload-images.jianshu.io/upload_images/115957-e58a6be35007f82c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/375)
+比赛信息 张斌进第一球，由奇峰助攻。龚武云进第二球... ...
 
 当点击 请假/报名 后，相应的按钮会变成灰色，对应的按钮内容变成 已请假/已报名。
 
 当有队员报名或者请假时，会出现报名队员列表和请假队员列表。如果没人报名或者请假，对应的列表入口隐藏。
 
 ![](https://upload-images.jianshu.io/upload_images/115957-5852c98c890b3e19.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/375)
+
+用户报名后，在比赛的前一天晚上10点，后台发送一条消息推送。
+
+![微信推送](https://upload-images.jianshu.io/upload_images/115957-f82fc9a90759a88c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/375)
+
+在比赛当天的7点，后台发送一条短信。
+${user_name}球星好，你已报名今天${time}在${place}的足球赛，请带好装备准时参加。
+eg:
+陈元杰球星好，你已报名今天20:00在小武基足球基地的足球赛，请带好装备准时参加。
+
 
 ## 数据统计
 目前用于足球队的出勤数据统计。按出勤次数排序。
